commit:2 Added feature of searchBarResult

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
             <h1>Recipe Finder</h1>
                 <div class="search-bar">
                     <input type="text" id="search-input" placeholder="Enter an ingredient">
+                    <button id="clear-btn">Clear</button>
                     <button id="search-btn">Search</button>
+                </div>
+                <div class="result-box">
+           
                 </div>
             </header>
             <main>
